[gd_scene load_steps=8 format=3 uid="uid://bpjo7i1aroc2j"]

[ext_resource type="Script" path="res://Scripts/Characters/Cows/cow.gd" id="1_jycfm"]
[ext_resource type="Texture2D" uid="uid://083sm207jgdv" path="res://Art/Cows/vaca.webp" id="2_5tue0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_77bnc"]
radius = 32.3883

[sub_resource type="CircleShape2D" id="CircleShape2D_70rmj"]
radius = 194.003

[sub_resource type="CircleShape2D" id="CircleShape2D_h68si"]
radius = 47.0425

[sub_resource type="CircleShape2D" id="CircleShape2D_ybxac"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqnfe"]

[node name="Cow" type="CharacterBody2D"]
script = ExtResource("1_jycfm")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_5tue0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_77bnc")

[node name="ScaredZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaredZone"]
shape = SubResource("CircleShape2D_70rmj")
debug_color = Color(0.839216, 0.32549, 0.533333, 0.419608)

[node name="UFOZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFOZone"]
shape = SubResource("CircleShape2D_h68si")
debug_color = Color(0.172549, 0.639216, 0.262745, 0.419608)

[node name="GrassZone" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrassZone"]
shape = SubResource("CircleShape2D_ybxac")
debug_color = Color(0.47451, 0.584314, 0.180392, 0.419608)

[node name="MilkZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="MilkZone"]
shape = SubResource("CircleShape2D_vqnfe")

[node name="MilkingTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="MewingTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ScaredTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="MilkingTimer" to="." method="_on_milking_timeout"]
[connection signal="timeout" from="MewingTimer" to="." method="_on_mewing_timeout"]
[connection signal="timeout" from="ScaredTimer" to="." method="_on_scared_timeout"]
